kubernetes/main/apps/default/linkwarden/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: linkwarden
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:v6qnOL8Q4DZfI1D01xdxcd6hG6Qgm/8POg==,iv:3McWGbOXa4EXuZk4aZ8f3tYG2qPdnEwiBVYrQFg1rG4=,tag:zc8oOK5ln+Av0E5xFFHGwg==,type:str]
          kind: Rule
          services:
            - name: linkwarden
              port: 3000
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvMTRCRnBURlhNbkFyWTlv
[...]
            ImqbBE0r+5i/xf4k0qu55FX8PllRpllfL6I9FYceG3wM3jvN0rpNrg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-06T13:41:18Z"
    mac: ENC[AES256_GCM,data:8by8oildYU+AI9JQyar6eeBMN6fYBGNjPFdknmu3F64Onxd6T61hzKhjoUDWtRk/2Xs8K4qJpX1Bvn+RnePUAeCjVw7gisF2WDDSpudoUVUet74vaHIfkbtAm4QSfyhRIS/IVRaPCr8tLLQTr6/pbkAp0vd2L2Qh51dx3Xp9SIs=,iv:2FcyYittqwHLD+2iySsdoO8qyLUQ78LLb570KvvAQv8=,tag:uz5GkCGeVzx5XSf04gdfyw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
